# variational_mesh_simplification

./: .gitignore  CMakeLists.txt  main.cpp
include/: candidate.h  function.h  metric.h  pqueue.h  types.h
